--- a/lib/src/dashboard_component/view_post_component/view_post_component.scss
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.scss
@@ -1,5 +1,7 @@
 @import 'package:angular_components/material_expansionpanel/material_expansionpanel.scss';
-
+#view-app {
+    /*height: calc(100vh - 64px);*/
+}
 .d-resp-text {
     display: block;
     white-space: nowrap;
@@ -26,6 +28,9 @@
 .tag::after {
     content: ' ';
 }
+.tag-host span {
+    display: inline !important;
+}
 .nt-center {
     position: absolute;
     top: 50%;
@@ -51,187 +56,127 @@
     display: none;
 }
 #view-box {
-    height: 400px;
-    max-height: 400px;
+    height: calc(100vh - 200px);
+    /*max-height: 400px;*/
     overflow-x: scroll;
 }
-
-.limiter {
-    width: 100%;
-    margin: 0 auto;
+.opa-7 {
+    opacity: 6 !important;
 }
-
-.container-table100 {
-    width: 100%;
-    min-height: 100vh;
-    background: #c4d3f6;
-
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 33px 30px;
+.db {
+    position: fixed;
+    right: 5%;
+    bottom: 7%;
 }
-
-.wrap-table100 {
-    width: 960px;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
 .table {
     width: 100%;
     display: table;
     margin: 0;
 }
+.table th,
+.table td,
+.table thead th {
+    vertical-align: middle;
+}
+.table th {
+    padding: .25rem;
+}
+.table thead tr {
+    background-color: #e1e1e1;
+}
+.table thead tr th {
+    font-family: Nyata !important;
+    color: #7e7e7e;
+}
+.tags-text,
+.created-at-text,
+.post-message-text {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.post-message-text {
+    width: 15rem;
+}
+.created-at-text {
+    width: 8rem;
+}
+.tags-text {
+    width: 8rem;
+}
+.tag-container {
+    width: 100%;
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+.view-slate {
+    height: calc(100vh - 100px);
+}
+li.nt-circle {
+}
+li.active {
+    background-color: #007bff;
+    color: white;
+    border: 1px solid #007bff;
+}
+.nt-form-control {
+    height: unset;
+}
+.special-btn:hover {
+    background-color: rgba(0, 0, 0, .1);
+}
+.popup {
+    position: fixed;
+
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
+    margin: auto;
+
+    width: 40%;
+    height: max-content;
+    background-color: rgba(244, 244, 244, 0.5);
+
+    animation-name: popup;
+    animation-fill-mode: forwards;
+    animation-duration: 300ms;
+    animation-iteration-count: 1;
+}
+#emoji-container {
+    position: absolute;
+    padding: 0 10px 10px;
+
+    width: 300px;
+    height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 @media screen and (max-width: 567px){
-    .cont {
-        height: 70vh;
+    .popup {
+        width: 90%;
+        margin: auto;
+    }
+    #emoji-container {
+        position: fixed;
+        bottom: 0;
+
+        border-radius: 0 !important;
+        width: 100vw;
+        height: 200px;
+    }
+    .db {
+        right: 10%;
     }
 }
-@media screen and (max-width: 768px) {
-    .table {
-        display: block;
+@keyframes popup {
+    from {
+        transform: scale(0, 0);
     }
-}
-
-.t-row {
-    display: table;
-    background: #fff;
-    border-radius: 20px;
-}
-
-.t-row.header {
-    color: #ffffff;
-    background: #192635;
-    text-align: center;
-}
-
-@media screen and (max-width: 768px) {
-    .t-row {
-        display: block;
-    }
-
-    .t-row.header {
-        padding: 0;
-        height: 0px;
-    }
-
-    .t-row.header .cell {
-        display: none;
-    }
-
-    .t-row .cell:before {
-        font-family: Nyata;
-        font-size: 12px;
-        color: #808080;
-        line-height: 1.2;
-        text-transform: uppercase;
-        font-weight: unset !important;
-
-        margin-bottom: 13px;
-        content: attr(data-title);
-        min-width: 98px;
-        display: block;
-    }
-}
-
-.cell {
-    display: table-cell;
-}
-
-@media screen and (max-width: 768px) {
-    .cell {
-        display: block;
-    }
-}
-
-.t-row .cell {
-    font-family: "Product Sans";
-    font-size: 15px;
-    color: #666666;
-    line-height: 1.2;
-    font-weight: unset !important;
-
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #f2f2f2;
-}
-
-.t-row.header .cell {
-    font-family: Nyata;
-    font-size: 18px;
-    color: #fff;
-    line-height: 1.2;
-    font-weight: unset !important;
-
-    padding-top: 19px;
-    padding-bottom: 19px;
-}
-
-.t-row .cell:nth-child(1) {
-    width: 360px;
-    padding-left: 40px;
-}
-
-.t-row .cell:nth-child(2) {
-    width: 160px;
-}
-
-.t-row .cell:nth-child(3) {
-    width: 250px;
-}
-
-.t-row .cell:nth-child(4) {
-    width: 190px;
-}
-
-
-.table, .t-row {
-    width: 100% !important;
-}
-
-.t-row:hover {
-    background-color: #e2e2e2;
-    cursor: pointer;
-    color: black !important;
-}
-
-.selected {
-    background-color: #e2e2e2 !important;
-}
-@media (max-width: 768px) {
-    .t-row {
-        /*border-bottom: 1px solid #f2f2f2;*/
-        padding-bottom: 18px;
-        padding-top: 30px;
-        padding-right: 15px;
-        margin: 0;
-    }
-
-    .t-row .cell {
-        border: none;
-        padding-left: 30px;
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-    .t-row .cell:nth-child(1) {
-        padding-left: 30px;
-    }
-
-    .t-row .cell {
-        font-family: Poppins-Regular;
-        font-size: 18px;
-        color: #555555;
-        line-height: 1.2;
-        font-weight: unset !important;
-    }
-
-    .table, .t-row, .cell {
-        width: 100% !important;
+    to {
+        transform: scale(1, 1);
     }
 }
