--- a/lib/src/dashboard_component/dashboard_component.scss
+++ b/lib/src/dashboard_component/dashboard_component.scss
@@ -175,6 +175,7 @@ material-drawer[persistent] > material-list > [group] > material-list-item > .si
 .show {
     display:block
 }
+#accounttemp:hover,
 #account:hover {
     color: #474646 !important;
 }
