--- a/web/styles.css
+++ b/web/styles.css
@@ -683,3 +683,70 @@ body {
 }
 /*
 <div class="lds-ring"><div></div><div></div><div></div><div></div></div>*/
+.drop-fade {
+  opacity: 0;
+  animation-name: drop-fade;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes drop-fade {
+  from {
+    opacity: 0;
+    margin-top: 50px;
+  }
+  to {
+    opacity: 1;
+    margin-top: initial;
+  }
+}
+.fade-in {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.slide-right {
+  opacity: 0;
+  animation-name: slide-right;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes slide-right {
+  from {
+    opacity: 0;
+    margin-right: -50px;
+  }
+  to {
+    opacity: 1;
+    margin-right: 0;
+  }
+}
+.slide-left {
+  opacity: 0;
+  animation-name: slide-left;
+  animation-duration: 500ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes slide-left {
+  from {
+    opacity: 0;
+    margin-left: -50px;
+  }
+  to {
+    opacity: 1;
+    margin-left: 0;
+  }
+}
