--- a/lib/src/dashboard_component/widgets/alert_component/alert_component.css
+++ b/lib/src/dashboard_component/widgets/alert_component/alert_component.css
@@ -17,6 +17,7 @@
     /*border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;*/
     border-radius: 5px;
+    /*border: 5px solid rgba(255, 255, 255, .2);*/
 
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;
 }
