--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
@@ -134,3 +134,8 @@ table td {
     transform: scale(1, 1);
   }
 }
+@media screen and (max-width: 567px) {
+  #dash-home {
+    height: 100%;
+  }
+}
