--- a/lib/src/dashboard_component/post_account_component/post_account_component.css
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.css
@@ -24,7 +24,7 @@
 
     /*box-shadow: 0px 2px 1px 0px #dbdbdb, 0px 2px 2px 0px #dedede;*/
 
-    background: rgba(255, 255, 255, 0.6) !important;
+    background: rgba(255, 255, 255, 0.6);
     filter: blur(0px) !important;
 
 
@@ -60,4 +60,9 @@ div[display="true"] {
     height: 220px;
     overflow-x: hidden;
     overflow-y: scroll;
+}
+@media screen and (max-width: 567px) {
+    #post-app {
+        height: 100% !important;
+    }
 }
