1 day to launch

--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
@@ -102,8 +102,17 @@ table td {
   border-bottom-right-radius: 20px;
 }
 
-@media screen and (max-width: 567px) {
+@media screen and (max-width: 991px) {
   #dash-home {
     height: 100%;
   }
+}
+
+.table td,
+.table th {
+  border-top: none;
+}
+.table thead th {
+  /*border-color: #32383e00;*/
+  border-bottom: none;
 }
