--- a/web/styles.css
+++ b/web/styles.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Material+Icons);
 @import url('http://fonts.cdnfonts.com/css/product-sans');
 
 @font-face {
@@ -38,7 +37,7 @@ body {
   /*font-family: Roboto, Helvetica, Arial, sans-serif;*/
   /*font-family: Gilroy;*/
   /*font-family: Nyata;*/
-  font-family: 'Product Sans', Google-Sans;
+  font-family: Google-Sans, "Product Sans", sans-serif;
   font-weight: 400;
 }
 .img-center {
