--- a/lib/src/home_component/home_component.css
+++ b/lib/src/home_component/home_component.css
@@ -37,17 +37,83 @@ or {
 }
 
 /*noinspection ALL*/
-#home {
-    background-image: url("img/home.png");
-    background-color: #fff;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 .bg-c {
     background: rgba(255, 255, 255, 0.5) !important;
 }
 .first {
     border-left: 1px solid #ababab;
+}
+
+#home {
+    height: 100vh;
+    font-family: Montserrat;
+}
+#col-2,
+#col-1 {
+    height: 100vh;
+}
+#col-2 {
+    /*background-color: rgb(238, 238, 238);*/
+    background-image: url(img/home_bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+#col-1 {
+    background-color: rgb(255, 255, 255);
+}
+.bus {
+    background-color: #000000;
+}
+.bus::after,
+.bus::before {
+    content: '.';
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    font-family: Google-Sans;
+}
+.m-card {
+    padding: 5px 10px;
+    width: max-content;
+    background-color: bisque;
+}
+.mini-card {
+    border-radius: 20px;
+    opacity: 0.7;
+    cursor: pointer;
+}
+.mini-card:hover {
+    opacity: 1;
+}
+.card-caption {
+    display: none;
+    padding: 5px 10px;
+    width: max-content;
+    background-color: #ffffff;
+    position: absolute;
+    border-radius: 3px;
+    margin-top: -30px;
+    margin-left: 60px;
+}
+.mini-card:hover .card-body > .card-caption {
+    display: block;
+    animation-name: slide-left;
+    animation-fill-mode: forwards;
+    animation-duration: 200ms;
+    animation-iteration-count: 1;
+}
+#digital{
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: darkorange;
+}
+@media screen and (max-width: 567px) {
+    #col-1, #col-2 {
+        height: 100%;
+    }
 }
 @media screen and (max-width: 567px) {
     .first {
