--- a/lib/src/signup_component/signup_component.css
+++ b/lib/src/signup_component/signup_component.css
@@ -15,6 +15,22 @@ form {
     margin-bottom: 9px;
     display: block;
 }
+#signup-bg {
+    height: 100vh;
+    width: 100vw;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, 0.16)
+}
+#sign {
+    background-image: url("img/signup_bg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.sh {
+    box-shadow: 0 10px 15px rgba(50, 50, 93, 0), 0 3px 10px rgba(0, 0, 0, .07) !important;
+}
 select {
     -moz-appearance: none;
     -webkit-appearance: none;
@@ -105,7 +121,6 @@ button:hover:before {
     transform: translate(-50%, -50%);
     display: none;
     content: '\f00c'; }
-
 #alert {
     position: fixed;
     top: 20px;
