--- a/lib/src/dashboard_component/dashboard_component.scss
+++ b/lib/src/dashboard_component/dashboard_component.scss
@@ -372,7 +372,7 @@ material-drawer[persistent].small-drawer > material-list > div[group] > .active_
     margin: auto;
 
     width: 40%;
-    height: max-content;
+    height: calc(30% - 2.5em);
     background-color: rgba(255, 255, 255, 0.4);
 
     animation-name: popup;
